<resources>
	<string name="app_name">Wireframes</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="profile_emergency_contact_settings_notification_help_log_out_string">Profile \nEmergency \nContact \nSettings \nNotification \nHelp \nLog out</string>
	<string name="begin_mental_health_survey_string">Begin Mental Health Survey</string>
	<string name="profile_string">Profile</string>
	<string name="hello_there__string">Hello there!</string>
	<string name="martial_arts_string">Martial Arts</string>
	<string name="walk__jog__run_ek1_string">Walk, Jog, Run</string>
	<string name="resources_for_you__string">Resources for You!</string>
	<string name="search____string">Search...</string>
	<string name="yoga_exercises_ek1_string">Yoga Exercises</string>
	<string name="yoga_exercises_ek2_string">Yoga Exercises</string>
	<string name="_1_2_3_breathe__string">1-2-3 Breathe!</string>
	<string name="martial_arts_ek2_string">Martial Arts</string>
	<string name="yoga_exercises_ek3_string">Yoga Exercises</string>
	<string name="_1_2_3_breath__string">1-2-3 Breath!</string>
	<string name="walk__jog__run_ek2_string">Walk, Jog, Run</string>
	<string name="walk__jog__run_ek3_string">Walk, Jog, Run</string>
	<string name="martial_arts_ek3_string">Martial Arts</string>
	<string name="walk__jog__run_ek4_string">Walk, Jog, Run</string>
	<string name="boxing_ek1_string">Boxing</string>
	<string name="hobbies_string">Hobbies</string>
	<string name="hello__jessica__string">Hello, Jessica!</string>
	<string name="for_you_string">For You</string>
	<string name="_10_minutes_of_stretching_with_anna_miller_string">10 minutes of stretching with Anna Miller</string>
	<string name="_10_min_string">10 min</string>
	<string name="new_programs_string">New Programs</string>
	<string name="and_start_yoga_string">And Start Yoga</string>
	<string name="keep_calm_ek1_string">Keep Calm</string>
	<string name="learn_more_string">Learn More</string>
	<string name="_8_30___9_30_am_string">8:30 = 9:30 AM</string>
	<string name="tuesday__dec__6_string">Tuesday, Dec. 6</string>
	<string name="upcoming_events_string">Upcoming Events</string>
	<string name="group_therapy_ek1_string">Group Therapy</string>
	<string name="join_now_string">Join Now</string>
	<string name="learn_more_ek1_string">Learn More</string>
	<string name="_6_30_8_30_pm_string">6:30-8:30 PM</string>
	<string name="tuesday__dec__6_ek1_string">Tuesday, Dec. 6</string>
	<string name="let_s_talk_string">Lets Talk</string>
	<string name="join_now_ek1_string">Join Now</string>
	<string name="learn_more_ek2_string">Learn More</string>
	<string name="_6_30_8_30_pm_ek1_string">6:30-8:30 PM</string>
	<string name="tuesday__dec__6_ek2_string">Tuesday, Dec. 6</string>
	<string name="outreach_ek1_string">Group Therapy</string>
	<string name="join_now_ek2_string">Join Now</string>
	<string name="learn_more_ek3_string">Learn More</string>
	<string name="_6_30_8_30_pm_ek2_string">6:30-8:30 PM</string>
	<string name="tuesday__dec__6_ek3_string">Tuesday, Dec. 6</string>
	<string name="for_you_ek1_string">For You</string>
	<string name="_10_minutes_of_stretching_with_anna_miller_ek1_string">10 minutes of stretching with Anna Miller</string>
	<string name="_10_min_ek1_string">10 min</string>
	<string name="hello__jessica__ek1_string">Hello, Jessica!</string>
	<string name="new_programs_ek1_string">New Programs</string>
	<string name="and_start_yoga_ek1_string">And Start Yoga</string>
	<string name="keep_calm_ek3_string">Keep Calm</string>
	<string name="learn_more_ek4_string">Learn More</string>
	<string name="_8_30___9_30_am_ek1_string">8:30 = 9:30 AM</string>
	<string name="tuesday__dec__6_ek4_string">Tuesday, Dec. 6</string>
	<string name="upcoming_events_ek1_string">Upcoming Events</string>
	<string name="group_therapy_ek3_string">Group Therapy</string>
	<string name="join_now_ek3_string">Join Now</string>
	<string name="learn_more_ek5_string">Learn More</string>
	<string name="_6_30_8_30_pm_ek3_string">6:30-8:30 PM</string>
	<string name="tuesday__dec__6_ek5_string">Tuesday, Dec. 6</string>
	<string name="let_s_talk_ek1_string">Lets Talk</string>
	<string name="join_now_ek4_string">Join Now</string>
	<string name="learn_more_ek6_string">Learn More</string>
	<string name="_6_30_8_30_pm_ek4_string">6:30-8:30 PM</string>
	<string name="tuesday__dec__6_ek6_string">Tuesday, Dec. 6</string>
	<string name="outreach_ek3_string">Outreach</string>
	<string name="join_now_ek5_string">Join Now</string>
	<string name="learn_more_ek7_string">Learn More</string>
	<string name="_6_30_8_30_pm_ek5_string">6:30-8:30 PM</string>
	<string name="tuesday__dec__6_ek7_string">Tuesday, Dec. 6</string>
	<string name="when_you_do_yoga__your_brain_cells_develop_new_connections__and_changes_occur_in_brain_structure_as_well_as_function__resulting_in_improved_cognitive_skills__such_as_learning_and_memory__yoga_strengthens_parts_of_the_brain_that_play_a_key_role_in_memory__attention__awareness__thought__and_language__relief_from_depression_and_anxiety_reduce_the_effects_of_ptsd_and_similar_conditions_boost_concentration__focus__and_memory_improve_your_mood_keep_your_brain_young_string">When you do yoga, your brain cells develop new connections, and changes occur in brain structure as well as function, resulting in improved cognitive skills, such as learning and memory. Yoga strengthens parts of the brain that play a key role in memory, attention, awareness, thought, and language. Relief from depression and anxietyReduce the effects of PTSD and similar conditionsBoost concentration, focus, and memory Improve your moodKeep your brain young </string>
	<string name="ready_to_improve_your_body_and_brain_with_yoga__string">Ready to improve your body and brain with yoga?</string>
	<string name="yoga_exercises_ek4_string">Yoga Exercises</string>
	<string name="view_trainers_ek2_string">View Trainers</string>
	<string name="kiara_johnson_string">Kiara Johnson</string>
	<string name="yoga_trainer_ek1_string">Yoga Trainer</string>
	<string name="view_profile_string">View Profile</string>
	<string name="_10_00_am___12_00_pm_string">10:00 AM - 12:00 PM</string>
	<string name="thursday__dec__8_string">Thursday, Dec. 8</string>
	<string name="diane_clarkson_string">Diane Clarkson</string>
	<string name="yoga_trainer_ek3_string">Yoga Trainer</string>
	<string name="view_profile_ek1_string">View Profile</string>
	<string name="_1_00___2_30_pm_string">1:00 - 2:30 PM</string>
	<string name="thursday__dec__8_ek1_string">Thursday, Dec. 8</string>
	<string name="kimberly_nguyen_string">Kimberly Nguyen</string>
	<string name="yoga_trainer_ek5_string">Yoga Trainer</string>
	<string name="view_profile_ek2_string">View Profile</string>
	<string name="_7_30___9_00_am_string">7:30 - 9:00 AM</string>
	<string name="friday__dec__9_string">Friday, Dec. 9</string>
	<string name="trina_tan_string">Trina Tan</string>
	<string name="yoga_trainer_ek7_string">Yoga Trainer</string>
	<string name="view_profile_ek3_string">View Profile</string>
	<string name="_1_00___2_30_pm_ek1_string">1:00 - 2:30 PM</string>
	<string name="friday__dec__9_ek1_string">Friday, Dec. 9</string>
	<string name="yoga_trainers_string">Yoga Trainers</string>
	<string name="about_my_goal_is_to_support_individuals__groups_and_families_to_re_discover_and_utilize_their_own_inherent_strengths_and_resources__capacity_for_growth_and_goals_for_transformation__my_specialty_areas_mental_health_issues_of_children__adolescents__and_adults_families_and_family_therapy_group_therapy_trauma_women_s_issues_substance_use_disorders_lgbt_and_gender_non_conformity_involvment_string">AboutMy goal is to support individuals, groups and families to re/discover and utilize their own inherent strengths and resources, capacity for growth and goals for transformation.My Specialty AreasMental Health Issues of Children, Adolescents, and AdultsFamilies and Family TherapyGroup TherapyTraumaWomens IssuesSubstance Use DisordersLGBT and Gender Non-ConformityInvolvment</string>
	<string name="group_therapy_in_person_string">Group TherapyIn-Person</string>
	<string name="let_s_talk_in_person_string">Lets TalkIn-Person</string>
	<string name="about_this_class_is_focused_on_the_fundamentals_of_yoga_and_creating_a_strong_foundation__postures_are_taught_from_the_ground_up_with_precise_alignment_cues_and_include_the_use_of_props_to_support_the_practice__roots_classes_simplify_the_language_and_practice_to_empower_students_and_help_them_become_confident_practitioners_of_any_class__string">AboutThis class is focused on the fundamentals of yoga and creating a strong foundation. Postures are taught from the ground up with precise alignment cues and include the use of props to support the practice. Roots classes simplify the language and practice to empower students and help them become confident practitioners of any class.</string>
	<string name="book_appointment_string">Book Appointment</string>
	<string name="kiara_johnson_ek1_string">Kiara Johnson</string>
	<string name="yoga_trainer_ek9_string">Yoga Trainer</string>
	<string name="_10_00_am___12_00_pm_ek1_string">10:00 AM - 12:00 PM</string>
	<string name="thursday__dec__8_ek2_string">Thursday, Dec. 8</string>
	<string name="kiara_johnson_ek2_string">Kiara Johnson</string>
	<string name="dr__manda_gatto_ek1_string">Dr. Manda Gatto</string>
	<string name="therapist_string">Therapist</string>
	<string name="view_profile_ek4_string">View Profile</string>
	<string name="_10_00_am___12_00_pm_ek2_string">10:00 AM - 12:00 PM</string>
	<string name="thursday__dec__8_ek3_string">Thursday, Dec. 8</string>
	<string name="dr__manda_gatto_ek2_string">Dr. Manda Gatto</string>
	<string name="therapist_ek1_string">Therapist</string>
	<string name="view_profile_ek5_string">View Profile</string>
	<string name="_1_00___2_30_pm_ek2_string">1:00 - 2:30 PM</string>
	<string name="thursday__dec__8_ek4_string">Thursday, Dec. 8</string>
	<string name="dr__manda_gatto_ek3_string">Dr. Manda Gatto</string>
	<string name="therapist_ek2_string">Therapist</string>
	<string name="view_profile_ek6_string">View Profile</string>
	<string name="_7_30___9_00_am_ek1_string">7:30 - 9:00 AM</string>
	<string name="friday__dec__9_ek2_string">Friday, Dec. 9</string>
	<string name="dr__manda_gatto_ek4_string">Dr. Manda Gatto</string>
	<string name="therapist_ek3_string">Therapist</string>
	<string name="view_profile_ek7_string">View Profile</string>
	<string name="_1_00___2_30_pm_ek3_string">1:00 - 2:30 PM</string>
	<string name="friday__dec__9_ek3_string">Friday, Dec. 9</string>
	<string name="book_appointment_ek1_string">Book Appointment</string>
	<string name="dr__manda_gatto_ek5_string">Dr. Manda Gatto</string>
	<string name="therapist_ek4_string">Therapist</string>
	<string name="start_survey_string">START SURVEY</string>
	<string name="check_up_string">CHECK UP</string>
	<string name="completing_this_screening_will_help_you_determine_if_your_recent_thoughts_or_behaviors_may_be_associated_with_a_common__treatable_mental_health_issue__string">Completing this screening will help you determine if your recent thoughts or behaviors may be associated with a common, treatable mental health issue. </string>
	<string name="anonymous_string">ANONYMOUS</string>
	<string name="we_cannot_link_these_screenings_to_any_one_individual__so_you_remain_anonymous__take_these_screenings_anywhere_you_feel_comfortable__string">We cannot link these screenings to any one individual, so you remain anonymous. Take these screenings anywhere you feel comfortable.</string>
	<string name="fast_string">FAST</string>
	<string name="it_takes_a_few_minutes_to_complete_the_screening__and_at_the_end_you_will_be_presented_with_information_and_next_steps__string">It takes a few minutes to complete the screening, and at the end you will be presented with information and next steps. </string>
	<string name="how_are_you_feeling__string">How are you feeling?</string>
</resources>